--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ pluginManagement {
         gradlePluginPortal()
         google()
         mavenCentral()
+        maven{ url 'https://dl.bintray.com/kotlin/kotlin-eap'}
     }
 }
 dependencyResolutionManagement {
@@ -10,6 +11,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven{ url 'https://dl.bintray.com/kotlin/kotlin-eap'}
     }
 }
 rootProject.name = "NoteRoom"
