--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    //使用插件
+    id 'com.google.devtools.ksp'
 }
 
 android {
@@ -32,7 +34,7 @@ android {
 }
 
 dependencies {
-    def room_version = "2.4.3"
+    def room_version = "2.4.0"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
