--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,9 @@
 plugins {
     id 'com.android.application' version '7.2.0' apply false
     id 'com.android.library' version '7.2.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    // kotlin 插件
+    id 'org.jetbrains.kotlin.android' version '1.5.10' apply false
+    // 声明要使用插件版本号。注意这里有坑，ksp版本要与kotlin插件版本保持一致。
     id 'com.google.devtools.ksp' version "1.5.10-1.0.0-beta01" apply false
 }
 
