fix compile error

--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,11 @@
 plugins {
     id 'com.android.application' version '7.2.0' apply false
     id 'com.android.library' version '7.2.0' apply false
-    // kotlin 插件
-    id 'org.jetbrains.kotlin.android' version '1.5.10' apply false
+    // kotlin 插件（1.5.10有bug 如下）
+    //java.lang.NoSuchMethodError: 'kotlin.sequences.Sequence com.google.devtools.ksp.processing.Resolver.getSymbolsWithAnnotation$default(com.google.devtools.ksp.processing.Resolver, java.lang.String, boolean, int, java.lang.Object)'
+    //Module was compiled with an incompatible version of Kotlin. The binary version of its metadata is 1.7.1, expected version is 1.5.1.
+    //Execution failed for task ':app:kspDebugKotlin'.
+    id 'org.jetbrains.kotlin.android' version '1.4.30' apply false
     // 声明要使用插件版本号。注意这里有坑，ksp版本要与kotlin插件版本保持一致。
     id 'com.google.devtools.ksp' version "1.5.10-1.0.0-beta01" apply false
 }
