--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.android.extensions'
     //使用插件
     id 'com.google.devtools.ksp'
+    id 'org.jetbrains.kotlin.kapt'
 }
 
 android {
@@ -34,7 +36,7 @@ android {
 }
 
 dependencies {
-    def room_version = "2.4.3"
+    def room_version = "2.4.0-alpha03"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
@@ -44,5 +46,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //room
     implementation "androidx.room:room-runtime:$room_version"
+    /**
+     * 超级大坑：room 2.4.0开始支持ksp.
+     * https://developer.android.google.cn/jetpack/androidx/releases/room#2.4.0-alpha03
+     *
+     * 试了2.4.0以上好多版本都不行，最后试了这个可以通过。
+     * */
     ksp "androidx.room:room-compiler:$room_version"
 }
