--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //room
     implementation "androidx.room:room-runtime:$room_version"
+    // room ktx
+    implementation "androidx.room:room-ktx:$room_version"
     /**
      * 超级大坑：room 2.4.0开始支持ksp.
      * https://developer.android.google.cn/jetpack/androidx/releases/room#2.4.0-alpha03
